--- a/uk-wax-test/src/main/webapp/WEB-INF/web.xml
+++ b/uk-wax-test/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  
   <servlet>
-    <servlet-name>disp</servlet-name>
+    <servlet-name>dispServlet</servlet-name>
     <servlet-class>de.skaliant.wax.core.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>controller.mode</param-name>
@@ -13,7 +14,25 @@
     </init-param>
   </servlet>
   <servlet-mapping>
-    <servlet-name>disp</servlet-name>
-    <url-pattern>/de/*</url-pattern>
+    <servlet-name>dispServlet</servlet-name>
+    <url-pattern>*.ds</url-pattern>
   </servlet-mapping>
+
+  <filter>
+      <filter-name>dispFilter</filter-name>
+      <filter-class>de.skaliant.wax.core.DispatcherFilter</filter-class>
+    <init-param>
+      <param-name>controller.mode</param-name>
+      <param-value>dynamic</param-value>
+    </init-param>
+    <init-param>
+      <param-name>controller.packages</param-name>
+      <param-value>de.skaliant.waxtest.ctrl</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>dispFilter</filter-name>
+    <url-pattern>*.df</url-pattern>
+  </filter-mapping>
+  
 </web-app>
